--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   redis:
     image: redis:7
     container_name: openlp_redis
+    command: ["redis-server", "--save", "", "--appendonly", "no"]
     ports:
       - "6379:6379"
 
@@ -33,8 +34,10 @@ services:
     build: .
     container_name: openlp_scheduler
     env_file: .env
+    environment:
+      PYTHONPATH: /app
     volumes:
       - ./tmp:/app/tmp
     depends_on:
       - redis
-    command: ["sh", "-c", "while true; do python scripts/scheduler.py --install; sleep 60; done"]
+    command: ["python", "scripts/scheduler.py"]
