--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ packaging==25.0
 playwright==1.56.0
 pyee==13.0.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 PyYAML==6.0.3
 redis==7.1.0
