--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 blinker==1.9.0
+brotli==1.2.0
+cffi==2.0.0
 click==8.3.1
 croniter==6.0.0
+cssselect2==0.8.0
 Flask==3.1.2
+fonttools==4.61.0
 greenlet==3.2.4
 gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==25.0
-playwright==1.56.0
+pillow==12.0.0
+pycparser==2.23
+pydyf==0.12.1
 pyee==13.0.0
+pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
@@ -17,5 +24,10 @@ PyYAML==6.0.3
 redis==7.1.0
 rq==2.6.1
 six==1.17.0
+tinycss2==1.5.1
+tinyhtml5==2.0.0
 typing_extensions==4.15.0
+weasyprint==67.0
+webencodings==0.5.1
 Werkzeug==3.1.4
+zopfli==0.4.0
